added the website's name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WOOD SHOP</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -157,7 +157,7 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        <p class="text-center copyright">Copyright &copy; 2024 . All rights reserved.</p>
+        <p class="text-center copyright">Copyright &copy; 2024 WOOD SHOP. All rights reserved.</p>
       </div>
     </div>
   </div>
