just added the name

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <nav class="navbar">
             <div class="left">
-                <a href="">LOGO</a>
+                <a href="">WOOD SHOP</a>
             </div>
             <div class="middle">
                 <ul>
