--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <li><a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
         </ul>
       </div>
-      <div class="col-md-4">
+      <div class="nav col-md-4">
         <h5>Quick Links</h5>
         <ul class="list-unstyled">
           <li><a href="#">Home</a></li>
